feat: add criminal domain module and fix all tests
- Implement CriminalDomainModule with templates for assault/uttering threats
- Add release conditions checklist, victim impact scaffold, police/crown process guide
- Register criminal domain with DomainModuleRegistry
- Fix all 180 tests passing (no skipped tests)
- Resolve React version conflict in frontend tests
- Update TemplateLibrary placeholder syntax for proper rendering

 Co-Authored-By: GitHub Copilot <copilot@github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ coverage/
 
 # Allow the example env as a template
 !backend/.env.example
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
