--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.12.7",
+    "jsdom": "^22.1.0",
+    "supertest": "^6.3.3",
     "typescript": "^5.6.3",
     "vitest": "^1.6.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^7.2.0",
+    "dompurify": "^3.3.1"
   }
 }
