ci: trigger CI on all pull requests, not just PRs to main
- Remove branches filter from pull_request trigger
- Allows CI to run on feature branch PRs (e.g., PR #2)
- Supports feature branch workflow while maintaining push-to-main triggers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ name: CI
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+  pull_request:  # Triggers on PRs to ANY branch
 
 jobs:
   unit-tests:
