--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -23,5 +23,10 @@
     "sourceMap": true
   },
   "include": ["src/**/*", "../src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "../src/core/agents/**/*",
+    "../src/core/kits/**/*"
+  ]
 }
